# Personal-AI-Employe

./: .env.example  .gitignore  CLAUDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INBOX_WORKFLOW.md  PROJECT_REFRENCE.md  QUICK_START.md  QWEN.md  README.md  SILVER_TIER_IMPLEMENTATION_SUMMARY.md  USER_GUIDE.md  VALIDATION_COMPLETE.md  VALIDATION_GUIDE.md  main.py  mypy.ini  package-lock.json  pyproject.toml  scheduled_tasks.yaml  state.db  state_backup_20260310_014054.db
.specify/memory/: constitution.md
AI_Employee_Dropbox/: README.md
AI_Employee_Vault/: Company_Handbook.md  Dashboard.md  VAULT_WORKFLOW_GUIDE.md  business_goals.md  state.db  user_profile.md
AI_Employee_Vault/Done/: EMAIL_20260309T011321Z_new-device-signed-in-to-your-aihubmix-account.md  EMAIL_20260309T011321Z_re-for-project-proposal-plan.md
AI_Employee_Vault/Logs/: 2026-03-09.json  2026-03-10.json  filesystem_watcher_heartbeat.txt  gmail_watcher_heartbeat.txt
AI_Employee_Vault/Needs_Action/: EMAIL_20260309T005244Z_re-for-project-proposal-plan.md  EMAIL_20260309T011321Z_new-device-signed-in-to-your-aihubmix-account.md  EMAIL_20260309T011321Z_re-for-project-proposal-plan.md  EMAIL_20260310T013852Z_new-device-signed-in-to-your-aihubmix-account.md  EMAIL_20260310T013853Z_re-for-project-proposal-plan.md  FILE_DROP_20260310T043857Z_test_1773117531.md
AI_Employee_Vault/Plans/: PLAN_COLLABORATION_RESPONSE_20260309.md
docs/: claude_integration.md  gmail_api_setup.md  linkedin_api_setup.md  linkedin_mcp_setup.md  mcp_server_setup.md  scheduling_setup.md  setup_guide.md  troubleshooting.md
history/adr/: 0001-mcp-server-framework-selection.md  0002-state-persistence-strategy.md
mcp_servers/email_sender/: .env.example  build.sh  package.json  server.py
scheduler/: cron_setup.py  task_executor.py  task_scheduler_setup.py
scripts/: approval_processor.py  benchmark.py  monitor_24h.py  run_24hour_test.py  run_performance_benchmarks.py  run_quickstart_validation.py  validate.sh
vault_setup/: __init__.py  create_vault.py  folder_structure.py  validators.py
watchers/: __init__.py  base_watcher.py  config.py  filesystem_watcher.py  gmail_watcher.py  linkedin_watcher.py  orchestrator.py  state_manager.py
(+69 files in other folders)
